# offspring

./: .gitattributes  .gitignore  LICENSE  NOTICE.md  README.md  RELEASING.md  SECURITY.md  THREAT_MODEL.md  package-lock.json  package.json  svelte.config.js
.cargo/: config.toml
.claude/: launch.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml
installer/: offspring-studio.iss  offspring.iss
installer/msix/: AppxManifest.xml  README.md  build-msix.ps1
installer/scripts/: download_ffmpeg.ps1  trust_cert.ps1
shell-ext/: Cargo.toml
shell-ext/src/: child.rs  compare.rs  grayscale.rs  invert.rs  launch.rs  lib.rs  make_square.rs  merge.rs  modify.rs  overlay.rs  presets.rs  presets_root.rs  root.rs  settings.rs  sub_enum.rs  tools_root.rs  trim.rs  util.rs
src/: app.html
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bootstrap.rs  cli.rs  commands.rs  debug_log.rs  defaults.rs  ffmpeg.rs  lib.rs  main.rs  paths.rs  presets.rs  sendto.rs  sequence.rs  single_instance.rs  updates.rs
src-tauri/src/integration/: context_menu.rs  dock_mac.rs  mod.rs  modern_menu.rs  sendto.rs  services_mac.rs
src/lib/: api.ts  types.ts
src/lib/components/: FormatFields.svelte
src/lib/styles/: global.css  tokens.css
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/compare-grid/: +page.svelte
src/routes/custom/: +page.svelte
src/routes/modify/: +page.svelte
src/routes/pick/: +page.svelte
src/routes/progress/: +page.svelte
src/routes/trim/: +page.svelte
tools/: build-release.ps1  bump-version.ps1  check-mac.sh  fix-context-menu.cmd  sign-release.ps1  update-icons.ps1
tools/offspring-sign/: Cargo.toml
tools/offspring-sign/src/: main.rs
