[package]
name = "offspring"
version = "0.3.35"
description = "Offspring — right-click convert videos/images with FFmpeg"
authors = ["Second March"]
edition = "2021"

[lib]
name = "offspring_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
# Single-instance: Explorer's classic-menu nested sub-verbs only pass the
# right-clicked file to each offspring.exe spawn, so a multi-file
# selection actually fires N separate processes. This plugin routes them
# all to the first instance; we accumulate their file args under a short
# debounce and then process them as one batch (sequential presets,
# single-pass merge/compare). See `run()` in lib.rs.
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
anyhow = "1"
mslnk = "0.1"
thiserror = "1"
# Windows registry access for the Explorer right-click submenu. We write a
# per-user HKCU\Software\Classes\*\shell\Offspring tree with an
# ExtendedSubCommandsKey pointing at per-preset verbs. See
# integration/context_menu.rs.
winreg = "0.55"
# FFmpeg bootstrap: download the LGPL essentials zip from gyan.dev and
# unpack it under %LOCALAPPDATA%\Offspring\ffmpeg\. ureq keeps the TLS
# stack pure-Rust (rustls) so the installer stays self-contained.
ureq = { version = "2", default-features = false, features = ["tls"] }
zip  = { version = "2",  default-features = false, features = ["deflate"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
