[package]
name = "offspring"
version = "0.3.43"
description = "Offspring — right-click convert videos/images with FFmpeg"
authors = ["Second March"]
edition = "2021"

[lib]
name = "offspring_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
# Single-instance + argv-forwarding IPC: Explorer's classic-menu
# nested sub-verbs only pass the right-clicked file to each
# offspring.exe spawn, so a multi-file selection actually fires N
# separate processes. We hand-roll the singleton dance via Win32
# named mutex + named pipe in `single_instance.rs` so secondaries
# exit BEFORE Tauri/tao boot — `tauri-plugin-single-instance` checks
# only after the runtime is up, which produced a brief flash of the
# secondary's hidden message-pump window on screen. See `run()` in
# lib.rs and `single_instance.rs`.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
anyhow = "1"
mslnk = "0.1"
thiserror = "1"
# Windows registry access for the Explorer right-click submenu. We write a
# per-user HKCU\Software\Classes\*\shell\Offspring tree with an
# ExtendedSubCommandsKey pointing at per-preset verbs. See
# integration/context_menu.rs.
winreg = "0.55"
# FFmpeg bootstrap: download the LGPL essentials zip from gyan.dev and
# unpack it under %LOCALAPPDATA%\Offspring\ffmpeg\. ureq keeps the TLS
# stack pure-Rust (rustls) so the installer stays self-contained.
ureq = { version = "2", default-features = false, features = ["tls"] }
zip  = { version = "2",  default-features = false, features = ["deflate"] }
# Supply-chain integrity: sha2 verifies the gyan.dev FFmpeg ZIP against
# its published SHA-256 sidecar; minisign-verify checks that the
# downloaded auto-update installer was signed by the offline private key
# whose public counterpart is pinned in `updates.rs`. Both crates are
# small and pure-Rust so they don't pull in C deps or grow the binary
# noticeably.
sha2 = "0.10"
minisign-verify = "0.2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
